Added support for legacy text printer aka help.ini to be in line with other model importers

--- a/WWMI/Core/WWMI/WuWa-Model-Importer.ini
+++ b/WWMI/Core/WWMI/WuWa-Model-Importer.ini
@@ -2,8 +2,12 @@ namespace=WWMIv1
 
 
 ; Includes -------------------------
+
 [IncludeUtilities]
 include = WWMI-Utilities.ini
+
+[IncludeLegacyTextPrinter]
+include = help.ini
 
 
 ; Key Bindings -------------------------
@@ -19,7 +23,7 @@ run = CommandListToggleCompatibilityMode
 
 [KeyToggleUserGuide]
 key = no_modifiers F12
-type = cycle 
+type = cycle
 $show_user_guide = 0,1
 
 [KeyToggleHuntingModeGuide]
@@ -130,7 +134,7 @@ if $mod_id == -1
     if ResourceModName === null
         ResourceModName = ResourceUnnamedModName
     endif
-    ResourceErrorIncompatibleVersionModNameRef = copy ResourceModName 
+    ResourceErrorIncompatibleVersionModNameRef = copy ResourceModName
 endif
 
 
@@ -144,12 +148,12 @@ endif
 
 [ResourceVersionNotification]
 type = Buffer
-data = "WWMI 0.7.7 (PRESS F12 TO SHOW GUIDE)"
+data = "WWMI 0.8.0 (PRESS F12 TO SHOW GUIDE)"
 
 
 [Constants]
 
-global $wwmi_version = 0.77
+global $wwmi_version = 0.80
 
 global $enable_ib_callbacks = 0
 
