Added dynamic VG remapping support

--- a/WWMI/Core/WWMI/WuWa-Model-Importer.ini
+++ b/WWMI/Core/WWMI/WuWa-Model-Importer.ini
@@ -148,12 +148,12 @@ endif
 
 [ResourceVersionNotification]
 type = Buffer
-data = "WWMI 0.8.0 (PRESS F12 TO SHOW GUIDE)"
+data = "WWMI 0.9.0 (PRESS F12 TO SHOW GUIDE)"
 
 
 [Constants]
 
-global $wwmi_version = 0.80
+global $wwmi_version = 0.90
 
 global $enable_ib_callbacks = 0
 
@@ -182,6 +182,8 @@ global $vg_count = 0
 global $custom_vertex_offset = 0
 global $custom_vertex_count = 0
 global $custom_mesh_scale = 1.0
+
+global $blend_remap_id = 0
 
 ; Used for text output if autodetection fails
 global $window_width = 1920
@@ -418,6 +420,64 @@ ps = null
 hs = null
 ds = null
 gs = null
+
+
+; Remaps VG ids in Blend.buf copy according to "reverse" VG map (OG -> Mapped)
+[CustomShaderBlendRemapper]
+; Load shader and explicitly unbind other shaders for safety
+cs = Shaders/BlendRemapper.hlsl
+vs = null
+ps = null
+hs = null
+ds = null
+gs = null
+; Backup used IniParams
+local $bak_y0 = y0
+local $bak_x2 = x2
+; Pass variables
+y0 = $custom_vertex_count
+x2 = $blend_remap_id
+; Pass resources to the shader
+; Input Resources:
+; cs-t34 - "reverse" VG map (i.e. {51:0, 286:1} map transforms [12, 286, 51] to [12, 1, 0])
+; cs-t35 - array of blendicies, required since OG Blend.buf stores VG ids as 8-bit UINTs, while we need 16-bit at least
+; Output Resources:
+; cs-u4 - remapped blend buffer 
+; cs-u7 = ResourceDebugRW
+; Run the compute shader
+dispatch = $custom_vertex_count/64+1, 1, 1
+; Restore IniParams:
+post y0 = $bak_y0
+post x2 = $bak_x2
+
+
+; Remaps VG ids in merged skeleton buffer copy according to "forward" VG map (Mapped -> OG)
+[CustomShaderSkeletonRemapper]
+; Load shader and explicitly unbind other shaders for safety
+cs = Shaders/SkeletonRemapper.hlsl
+vs = null
+ps = null
+hs = null
+ds = null
+gs = null
+; Backup used IniParams
+local $bak_w1 = w1
+local $bak_x2 = x2
+; Pass variables
+w1 = $vg_count
+x2 = $blend_remap_id
+; Pass resources to the shader
+; Input Resources:
+; cs-t37 - "forward" VG map (i.e. {0:0, 1:2} map transforms [VG0_DATA, VG1_DATA, VG2_DATA] to [VG0_DATA, VG2_DATA])
+; cs-t38 - merged skeleton
+; Output Resources:
+; cs-u5 - remapped merged skeleton 
+; cs-u7 = ResourceDebugRW
+; Run the compute shader
+dispatch = $vg_count/64+1, 1, 1
+; Restore IniParams:
+post w1 = $bak_w1
+post x2 = $bak_x2
 
 
 ; Resources -------------------------
