Added support of variable blend buffer per-vertex vg count for VG remapper

--- a/WWMI/Core/WWMI/WuWa-Model-Importer.ini
+++ b/WWMI/Core/WWMI/WuWa-Model-Importer.ini
@@ -184,6 +184,7 @@ global $custom_vertex_count = 0
 global $custom_mesh_scale = 1.0
 
 global $blend_remap_id = 0
+global $weights_per_vertex_count = 0
 
 ; Used for text output if autodetection fails
 global $window_width = 1920
@@ -434,9 +435,11 @@ gs = null
 ; Backup used IniParams
 local $bak_y0 = y0
 local $bak_x2 = x2
+local $bak_y2 = y2
 ; Pass variables
 y0 = $custom_vertex_count
 x2 = $blend_remap_id
+y2 = $weights_per_vertex_count
 ; Pass resources to the shader
 ; Input Resources:
 ; cs-t34 - "reverse" VG map (i.e. {51:0, 286:1} map transforms [12, 286, 51] to [12, 1, 0])
@@ -449,6 +452,7 @@ dispatch = $custom_vertex_count/64+1, 1, 1
 ; Restore IniParams:
 post y0 = $bak_y0
 post x2 = $bak_x2
+post y2 = $bak_y2
 
 
 ; Remaps VG ids in merged skeleton buffer copy according to "forward" VG map (Mapped -> OG)
