Added screen_width and screen_height to System section of d3dx.ini

--- a/WWMI/d3dx.ini
+++ b/WWMI/d3dx.ini
@@ -455,6 +455,10 @@ analyse_options = dump_rt dump_tex dump_cb dump_vb dump_ib buf txt
 ;------------------------------------------------------------------------------------------------------
 [System]
 
+; Monitor resolution, used as fallback when auto-detection fails for `window_width` and `window_height`
+screen_width = 1920
+screen_height = 1080
+
 ;proxy_d3d9=d3d9_helix.dll
 ;proxy_d3d11=d3d11_helix.dll
 
