Added missing UAV slots cleanups, deprecated $window_width and $window_height

--- a/WWMI/Core/WWMI/WuWa-Model-Importer.ini
+++ b/WWMI/Core/WWMI/WuWa-Model-Importer.ini
@@ -186,11 +186,9 @@ global $custom_mesh_scale = 1.0
 global $blend_remap_id = 0
 global $weights_per_vertex_count = 0
 
-; Used for text output if autodetection fails
+; Deprecated
 global $window_width = 1920
 global $window_height = 1080
-
-; Deprecated
 global persist $enable_compatibility_mode = 0
 global $enable_vb0_callbacks = 1
 global $component_draw_calls_count = 25
@@ -223,9 +221,12 @@ x0 = $shapekey_mode
 y0 = $shapekey_id
 z0 = $shapekey_value
 ; Pass resources to the shader
+; cs-u5 = ResourceCustomShapeKeyValuesRW
 ; cs-u7 = ResourceDebugRW
 ; Run the compute shader
 dispatch = 1, 1, 1
+; Unbind resources
+cs-u5 = null
 ; Restore IniParams:
 post x0 = $bak_x0
 post y0 = $bak_y0
@@ -354,9 +355,12 @@ y0 = $custom_vertex_count
 ; Inputs:
 ; $\WWMIv1\shapekey_vertex_count = $shapekey_vertex_count
 ; Pass resources to the shader
-cs-u7 = ResourceDebugRW
+; cs-u6 = PositionDataRW
+; cs-u7 = ResourceDebugRW
 ; Run the compute shader
 dispatch = $custom_vertex_count/64+1, 1, 1
+; Unbind resources
+cs-u6 = null
 ; Restore IniParams:
 post x0 = $bak_x0
 post y0 = $bak_y0
@@ -408,6 +412,8 @@ w1 = $vg_count
 ; cs-u7 = ResourceDebugRW
 ; Run the compute shader
 dispatch = $vg_count/64+1, 1, 1
+; Unbind resources
+cs-u6 = null
 ; Restore IniParams:
 post x1 = $bak_x1
 post z1 = $bak_z1
@@ -449,6 +455,8 @@ y2 = $weights_per_vertex_count
 ; cs-u7 = ResourceDebugRW
 ; Run the compute shader
 dispatch = $custom_vertex_count/64+1, 1, 1
+; Unbind resources
+cs-u4 = null
 ; Restore IniParams:
 post y0 = $bak_y0
 post x2 = $bak_x2
@@ -479,6 +487,8 @@ x2 = $blend_remap_id
 ; cs-u7 = ResourceDebugRW
 ; Run the compute shader
 dispatch = $vg_count/64+1, 1, 1
+; Unbind resources
+cs-u5 = null
 ; Restore IniParams:
 post w1 = $bak_w1
 post x2 = $bak_x2
