Set dll_initialization_delay to 100ms to System section of d3dx.ini

--- a/WWMI/d3dx.ini
+++ b/WWMI/d3dx.ini
@@ -462,6 +462,10 @@ screen_height = 1080
 ;proxy_d3d9=d3d9_helix.dll
 ;proxy_d3d11=d3d11_helix.dll
 
+; Delay in milliseconds for DLL initialization.
+; Wuthering Waves requires at least 50ms delay since 2.4 update to not crash on startup
+dll_initialization_delay = 100
+
 ; We force all LoadLibrary calls back to the game folder, because games
 ; and nvidia both break the loading chain by going directly to System32.
 ; load_library_redirect=0 for off, allowing all through unchanged.
